# rust-lrs

./: .env.dist  .gitignore  Cargo.toml  config.toml  docker-compose.yml  rust_lrs_migration_plan.md
migrations/: .gitkeep  20260325010642_create_users.sql  20260325010647_create_verbs.sql  20260325010652_create_agents.sql  20260325010655_create_relevant_types.sql  20260325010700_create_context_agents_groups.sql  20260325010703_create_activities.sql  20260325010707_create_sub_statements.sql  20260325010712_create_statements.sql  20260325010715_create_statement_attachments.sql  20260325010721_create_document_stores.sql  20260325010723_create_oauth.sql  20260325010725_create_hooks.sql
src/: config.rs  main.rs
src/api/: mod.rs  routes.rs
src/api/dto/: agent.rs  error.rs  mod.rs  statement.rs
src/api/extractors/: auth.rs  mod.rs  query.rs
src/api/handlers/: about.rs  activities.rs  activity_profile.rs  activity_state.rs  agent_profile.rs  agents.rs  mod.rs  statements.rs  statements_more.rs
src/api/middleware/: auth.rs  error_handler.rs  mod.rs  version_header.rs
src/application/: activity_service.rs  agent_service.rs  auth_service.rs  document_service.rs  mod.rs  statement_service.rs
src/domain/: activity.rs  actor.rs  attachment.rs  context.rs  error.rs  mod.rs  result.rs  statement.rs  verb.rs
src/domain/validation/: actor_validator.rs  attachment_validator.rs  common.rs  context_validator.rs  mod.rs  object_validator.rs  result_validator.rs  statement_validator.rs  verb_validator.rs
src/infrastructure/: mod.rs
src/infrastructure/background/: mod.rs  (+3 more)
(+8 files in other folders)
