[package]
name = "rust-lrs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
iri-string = "0.7"
thiserror = "2.0"
config = "0.14"
bcrypt = "0.16"
hmac = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }